@@ -1,4 +1,9 @@
 2011-11-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ doc/Makefile.am:
+ - Fail if doxygen not available (and documentation build not disabled).
+ - Fixes #245.  Thanks Chris Angelico.
+2011-11-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/performance.hxx:
  - Don't mention tablestreams any more.
  - Fixes #246.  Thanks Chris Angelico.
 2011-11-24  Jeroen T. Vermeulen <jtv@xs4all.nl>
